--- a/app/assets/stylesheets/module/heirtage_top_area.scss
+++ b/app/assets/stylesheets/module/heirtage_top_area.scss
@@ -1,10 +1,10 @@
 .heritage-top-area {
-  margin: 140px auto 20px auto;
+  margin: 140px auto 15vh auto;
   width: 80vw;
 }
 .heritage-item-list {
   display: flex;
-  padding: 30px 0 20px 11vw;
+  padding: 5vh 0 20px 11vw;
   &__content {
     width: 40vw;
     font-size: 1.7rem;
@@ -88,7 +88,7 @@
 
 @media (max-width: 767px) {
   .heritage-top-area {
-    margin: 110px auto 20px auto;
+    margin: 110px auto 7vh auto;
     width: 100vw;
   }
   .heritage-item-list {
