--- a/app/views/heritages/show.html.erb
+++ b/app/views/heritages/show.html.erb
@@ -40,6 +40,24 @@
   </div>
 
   <div class="slide-show-area">
+    <div class="slide-wrapper">
+      <%= image_tag "heritage/マチュピチュ/1.png", class: "slide-show-area__img" %>
+      <%= image_tag "heritage/マチュピチュ/2.png", class: "slide-show-area__img" %>
+      <%= image_tag "heritage/マチュピチュ/3.png", class: "slide-show-area__img" %>
+      <%= image_tag "heritage/マチュピチュ/4.png", class: "slide-show-area__img" %>
+    </div>
+    <div class="slide-wrapper">
+      <%= image_tag "heritage/マチュピチュ/1.png", class: "slide-show-area__img" %>
+      <%= image_tag "heritage/マチュピチュ/2.png", class: "slide-show-area__img" %>
+      <%= image_tag "heritage/マチュピチュ/3.png", class: "slide-show-area__img" %>
+      <%= image_tag "heritage/マチュピチュ/4.png", class: "slide-show-area__img" %>
+    </div>
+      <div class="slide-wrapper">
+      <%= image_tag "heritage/マチュピチュ/1.png", class: "slide-show-area__img" %>
+      <%= image_tag "heritage/マチュピチュ/2.png", class: "slide-show-area__img" %>
+      <%= image_tag "heritage/マチュピチュ/3.png", class: "slide-show-area__img" %>
+      <%= image_tag "heritage/マチュピチュ/4.png", class: "slide-show-area__img" %>
+    </div>
   </div>
 </div>
 
