--- a/app/assets/stylesheets/module/slide_show_area.scss
+++ b/app/assets/stylesheets/module/slide_show_area.scss
@@ -1,6 +1,6 @@
 .slide-show-area {
   width: 100vw;
-  margin: 50px auto;
+  margin: 50px auto 15vh auto;
   display: flex;
   align-items: center;
   overflow: hidden;
