--- a/app/assets/stylesheets/module/btns.scss
+++ b/app/assets/stylesheets/module/btns.scss
@@ -15,10 +15,10 @@
   padding: 5px;
 }
 .review-create-btn {
-  font-size: 1.5rem;
-  background-color: #0f1622;
-  border: 1px solid #0f1622;
-  border-radius: 5px;
+  font-size: 1.7rem;
+  background-color: #0957dd;
+  border: 1px solid #0957dd;
+  border-radius: 10px;
   color: #fff;
   padding: 5px 10px;
 }
