魅力第2ブロック完成

--- a/app/assets/stylesheets/module/heritage_main_block.scss
+++ b/app/assets/stylesheets/module/heritage_main_block.scss
@@ -1,5 +1,5 @@
 .heritage-main-block {
-  background-image: asset-url('module/bg_paper.png');
+  background-image: asset-url('bg_paper.png');
   background-size: cover;
   background-repeat: no-repeat;
   padding: 30px 0;
