--- a/app/views/heritages/show.html.erb
+++ b/app/views/heritages/show.html.erb
@@ -92,81 +92,40 @@
   <% end %>
 </div>
 
-  <div id="first-charm-area" class="charm-detail-block">
-    <div class="charm-img-wrapper">
-      <%= image_tag(@heritage_first_charm.image) %>
-      <span><%= @heritage_first_charm.main_title %></span>
-    </div>
-    <div class="charm-describe-wrapper">
-      <strong class="charm-describe-wrapper__sub-title">
-        <%= @heritage_first_charm.sub_title %>
-      </strong>
-      <span class="charm-describe-wrapper__detail">
-        <%= @heritage_first_charm.detail %>
-      </span>
-    </div>
-  </div>
-
-  <div id="second-charm-area" class="charm-detail-block">
-    <div class="charm-img-container">
-      <%= image_tag(@heritage_second_charm.image) %>
-      <span><%= @heritage_second_charm.main_title %></span>
-    </div>
+<div class="sub-charm-block">
+  <div class="charm-wrapper js-charm-wrapper">
+    <%= image_tag "heritage/マチュピチュ/charm3.png", class: "charm-wrapper__img" %>
     <div class="charm-describe-container">
-      <strong class="charm-describe-wrapper__sub-title">
-        <%= @heritage_second_charm.sub_title %>
-      </strong>
-      <span class="charm-describe-wrapper__detail">
-        <%= @heritage_second_charm.detail %>
-      </span>
-    </div>
-  </div>
-
-  <div id="third-charm-area" class="charm-detail-block">
-    <div class="charm-img-wrapper">
-      <%= image_tag(@heritage_third_charm.image) %>
-      <span><%= @heritage_third_charm.main_title %></span>
-    </div>
-    <div class="charm-describe-wrapper">
-      <strong class="charm-describe-wrapper__sub-title">
+      <p class="charm-describe-container__title">
         <%= @heritage_third_charm.sub_title %>
-      </strong>
-      <span class="charm-describe-wrapper__detail">
+      </p>
+      <p class="charm-describe-container__detail">
         <%= @heritage_third_charm.detail %>
-      </span>
+      </p>
     </div>
   </div>
-
-  <div id="fourth-charm-area" class="charm-detail-block">
-    <div class="charm-img-container">
-      <%= image_tag(@heritage_fourth_charm.image) %>
-      <span><%= @heritage_fourth_charm.main_title %></span>
-    </div>
-    <div class="charm-describe-container">
-      <strong class="charm-describe-wrapper__sub-title">
+  <div class="charm-wrapper js-charm-wrapper">
+    <%= image_tag "heritage/マチュピチュ/charm4.png", class: "charm-wrapper__img order-2" %>
+    <div class="charm-describe-container order-1">
+      <p class="charm-describe-container__title">
         <%= @heritage_fourth_charm.sub_title %>
-      </strong>
-      <span class="charm-describe-wrapper__detail">
+      </p>
+      <p class="charm-describe-container__detail">
         <%= @heritage_fourth_charm.detail %>
-      </span>
+      </p>
     </div>
   </div>
-  <hr>
-</div>
-
-<div class="heritage-tour-block" id="tour-area">
-</div>
-
-<div class="heritage-photo-block" id="photo-area">
 </div>
 
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     var mainImgElements = document.querySelectorAll('.js-main-img');
     var subImgElements = document.querySelectorAll('.js-sub-img');
+    var subCharmBlocks = document.querySelectorAll('.js-charm-wrapper');
     var observerCallback = function(entries, observer) {
       entries.forEach(function(entry) {
         if (entry.isIntersecting) {
+          console.log(1);
           entry.target.classList.add('fade-in');
           observer.unobserve(entry.target);
         }
@@ -192,6 +151,9 @@
     });
     subImgElements.forEach(function(img) {
       observerSub.observe(img);
+    });
+    subCharmBlocks.forEach(function(block) {
+      observer.observe(block);
     });
 
     // スマホ版のページでsub-imgの下にdescribeが来るように調整
