--- a/app/views/heritages/show.html.erb
+++ b/app/views/heritages/show.html.erb
@@ -117,6 +117,11 @@
   </div>
 </div>
 
+<div class="heritage-map-block">
+  <p class="heritage-map-block__title">マップ上の位置</p>
+  <%= render 'shared/heritage_map' %>
+</div>
+
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     var mainImgElements = document.querySelectorAll('.js-main-img');
