「エリアから探す」をパーツ化

--- a/app/views/heritages/index.html.erb
+++ b/app/views/heritages/index.html.erb
@@ -18,19 +18,5 @@
 </div>
 <hr class="top-heritages-list__hr">
 
-<div class="top-area-list">
-  <span class="top-area-list__title">エリアから探す</span>
-  <div class="continent-card-wrapper">
-    <% @continents.each do |continent| %>
-      <%= link_to continent_path(continent) do %>
-        <div class="continent-card">
-            <%= image_tag continent.image, class: "continent-card__img" %>
-            <span class="continent-card__name">
-              <%= continent.name %>
-            </span>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
-</div>
+<%= render 'shared/area_list' %>
 <hr class="top-area-list__hr">
