--- a/app/views/heritages/show.html.erb
+++ b/app/views/heritages/show.html.erb
@@ -122,6 +122,11 @@
   <%= render 'shared/heritage_map' %>
 </div>
 
+<div class="area-search-block">
+  <%= render 'shared/area_list' %>
+</div>
+
+
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     var mainImgElements = document.querySelectorAll('.js-main-img');
