プロフ編集ページ完成

--- a/app/assets/stylesheets/module/pc_header_menu.scss
+++ b/app/assets/stylesheets/module/pc_header_menu.scss
@@ -35,6 +35,7 @@
     &__singup-link,
     &__heritage-index-link,
     &__user-index-link,
+    &__profile-edit,
     &__logout-link {
       display: block;
       font-size: 1.5rem;
