--- a/app/assets/stylesheets/module/profile_edit_form.scss
+++ b/app/assets/stylesheets/module/profile_edit_form.scss
@@ -3,55 +3,104 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 40%;
-  margin: 0 auto;
-  padding: 20px 5%;
+  width: 60%;
+  margin: 40px auto;
+  padding: 20px 0;
   border: 1px solid #ccc;
   border-radius: 10px;
   background-color: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
+  &__submit {
+    background-color: #0957dd;
+    border-color: #0957dd;
+    color: #fff;
+    display: block;
+    width: 30%;
+    height: 50px;
+    margin: 50px auto;
+    border-radius: 10px;
+    font-size: 1.7rem;
+    padding: 10px;
+  }
+  &__hr {
+    width: 80%;
+    margin: 0 auto;
+    border-color: #dadada;
+  }
+}
+.profile-top-area {
+  width: 80%;
+  margin: 40px auto;
+  display: flex;
+  align-items: center;
   &__form-title {
-    font-weight: bold;
+    font-weight: 500;
     font-size: 3rem;
     text-align: center;
     padding: 40px 0;
   }
-  &__user-name,
-  &__email,
-  &__content,
-  &__submit {
-    display: block;
-    width: 100%;
-    height: 50px;
-    margin: 50px auto;
-    border-radius: 5px;
-    border: 1px solid #a4a3a3;
-    font-size: 1.7rem;
-    padding: 10px;
-  }
-  &__content {
-    height: 150px;
-  }
-  &__submit {
-    margin-top: 20px;
-    background-color: #0957dd;
-    border-color: #0957dd;
-    color: #fff;
-  }
 }
 .user-icon-area {
   position: relative;
-  display: inline-block;
+  margin-left: auto;
   &__user-icon {
+    width: 10vw;
+    aspect-ratio: 1 / 1;
     border-radius: 50%;  
   }
-  &__camera-icon {
+  &__edit-btn {
     position: absolute;
-    top: 50%;
+    bottom: 0;
     left: 50%;
     z-index: 10;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 50%);
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    padding: 10px;
+    border: 1px solid #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    border-radius: 30px;
+    color: #000;
+    & span {
+      padding-left: 10px;
+    }
+  }
+}
+.user-column-area {
+  display: grid;
+  grid-template-columns: 3fr 7fr;
+  width: 80%;
+  height: 100px;
+  margin: 0 auto;
+  &__label {
+    font-weight: normal;
+    font-size: 1.7rem;
+    background-color: #ececec;
+    padding: 30px 20px;
+  }
+  &__input {
+    display: inline-block;
+    margin: 20px;
+    border: 1px solid #a4a3a3;
+    border-radius: 10px;
+    font-size: 1.7rem;
+    padding: 10px;
+  }
+}
+.email-inner {
+  display: inline-block;
+  font-size: 1.7rem;
+  margin: 20px;
+  &__value {
+    padding-bottom: 10px;    
+  }
+  &__link {
+    color: #0f84ff;
+  }
+  &__link:hover {
+    color: #0f84ff;
   }
 }
 
@@ -62,16 +111,43 @@
     left: auto;    
     width: 100%;
     border: none;
-    padding: 30px 20px;
+    padding-top: 30px;
+    margin: 40px 0 0 0;
     transform: none;
-    &__form-title {
-      padding-bottom: 0;
-    }
-    &__email,
-    &__user-name,
-    &__content,
-    &__submit {
-      margin: 30px auto;
+    &__hr {
+      display: none;
     }
   }  
+  .profile-top-area {
+    width: 100%;
+    margin: 20px auto;
+    display: block;
+    &__form-title {
+      font-size: 2.5rem;
+      text-align: center;
+      padding: 0;
+    }
+  }
+  .user-icon-area {
+    width: 40vw;
+    margin: 50px auto;
+    &__user-icon {
+      width: 100%;
+    }
+  }
+  .user-column-area {
+    display: block;
+    width: 100%;
+    height: auto;
+    &__label {
+      display: block;
+      height: 80px;
+      padding: 30px 20px;
+    }
+    &__input {
+      display: inline-block;
+      width: 90%;
+      height: 60px;
+    }
+  }
 }
