--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,7 @@
           <%= link_to "世界遺産", heritages_url, class: "hover-menu-list__heritage-index-link" %>
           <%= link_to "ユーザー一覧", users_url, class: "hover-menu-list__user-index-link" %>
           <hr class="hover-menu-list__hr">
+          <%= link_to "プロフィール編集", edit_user_path(current_user), class: "hover-menu-list__profile-edit" %>
           <%= link_to "お気に入り", heritage_like_path(current_user), class: "hover-menu-list__bookmark-link" %>
           <%= link_to "ログアウト", logout_path, data: { "turbo-method": :delete }, class: "hover-menu-list__logout-link" %>
         </div>
