--- a/app/assets/stylesheets/module/mobile_header.scss
+++ b/app/assets/stylesheets/module/mobile_header.scss
@@ -49,6 +49,7 @@
     background-color: #fff;
     z-index: 1000;
     padding: 15px;
+    border: 0.5px solid #cacaca;
     &__close-icon {
       display: block;
       margin-bottom: 20px;
