--- a/app/assets/stylesheets/module/signup_form.scss
+++ b/app/assets/stylesheets/module/signup_form.scss
@@ -1,20 +1,22 @@
 .signup-form {
   position: fixed;
-  top: 50%;
+  top: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   width: 40%;
-  margin: 0 auto;
-  padding: 20px 5%;
+  height: auto;
+  overflow-y: scroll;
+  margin: 140px auto;
+  padding: 20px 5% 70px 5%;
   border: 1px solid #ccc;
   border-radius: 10px;
   background-color: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
   &__form-title {
-    font-weight: bold;
+    font-weight: 500;
     font-size: 3rem;
     text-align: center;
-    padding: 40px 0;
+    padding-top: 40px;
   }
   &__user-name,
   &__email,
@@ -24,8 +26,8 @@
     display: block;
     width: 100%;
     height: 50px;
-    margin: 50px auto;
-    border-radius: 5px;
+    margin: 50px auto 0 auto;
+    border-radius: 10px;
     border: 1px solid #a4a3a3;
     font-size: 1.7rem;
   }
@@ -34,6 +36,16 @@
     border-color: #0957dd;
     color: #fff;
   }
+}
+.signup-form-wrapper {
+  background-color: #ececec;
+  width: 100vw;
+  height: auto;
+  min-height: 100vh;
+}
+.validation-error-message {
+  padding-top: 5px;
+  color: #ff4949;
 }
 
 @media (max-width: 767px) {
@@ -45,15 +57,14 @@
     border: none;
     padding: 30px 20px;
     transform: none;
+    border: none;
+    box-shadow: none;
+    margin: 70px auto;
     &__form-title {
       padding-bottom: 0;
     }
-    &__user-name,
-    &__email,
-    &__password,
-    &__password-confirmation,
-    &__submit {
-      margin: 30px auto;
-    }
+  }
+  .signup-form-wrapper {
+    background-color: #fff;
   }  
 }
