--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,3 @@
-<% if object.errors.any? %>
-  <div class="alert alert-danger">
-    <ul>
-    <% [:name, :email, :password, :password_confirmation].each do |attribute| %>
-      <% object.errors[attribute].each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    <% end %>
-    </ul>
-  </div>
+<% if @user.errors[:name].any? %>
+  <p class="validation-error-message"><%= @user.errors[:name][0] %></p>
 <% end %>
