--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,20 +1,17 @@
-<% provide(:title, 'Reset password') %>
-<h1>Reset password</h1>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<% provide(:title, "パスワード再設定") %>
+<div class="password-reset-wrapper">
+  <div class="password-reset-form">
+    <p class="password-reset-form__title">パスワード再設定</p>
     <%= form_with(model: @user, url: password_reset_path(params[:id])) do |f| %>
-      <%= render 'shared/error_messages', object: @user %>
-
       <%= hidden_field_tag :email, @user.email %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+      <%= f.password_field :password, placeholder: "パスワード:8~20桁の半角英数字(各1文字以上)", class: 'password-reset-form__password' %>
+      <%= error_message_for(@user, :password) %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+      <%= f.password_field :password_confirmation, placeholder: "パスワード確認欄", class: 'password-reset-form__password-confirmation' %>
+      <%= error_message_for(@user, :password_confirmation) %>
 
-      <%= f.submit "Update password", class: "btn btn-primary" %>
+      <%= f.submit "変更する", class: "password-reset-form__submit" %>
     <% end %>
   </div>
 </div>
