--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,13 +1,10 @@
-<% provide(:title, "Forgot password") %>
-<h1>Forgot password</h1>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<% provide(:title, "パスワード再設定") %>
+<div class="password-reset-wrapper">
+  <div class="password-reset-form">
+    <p class="password-reset-form__title">パスワード再設定</p>
     <%= form_with(url: password_resets_path, scope: :password_reset) do |f| %>
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
-
-      <%= f.submit "Submit", class: "btn btn-primary" %>
+      <%= f.email_field :email, placeholder: "メールアドレス", class: 'password-reset-form__input' %>
+      <%= f.submit "変更する", class: "password-reset-form__submit" %>
     <% end %>
   </div>
 </div>
