会員登録後、プロフィール編集後の挙動を修正

--- a/app/assets/stylesheets/module/password_reset_wrapper.scss
+++ b/app/assets/stylesheets/module/password_reset_wrapper.scss
@@ -19,8 +19,13 @@
   &__title {
     font-weight: 500;
     font-size: 3rem;
-    text-align: center;
     padding: 20px 0;
+    text-align: center;
+  }
+  &__describe {
+    font-size: 1.7rem;
+    padding: 60px 0 20px 0;
+    font-weight: 200;
   }
   &__input,
   &__password-confirmation,
@@ -33,6 +38,9 @@
     border-radius: 5px;
     border: 1px solid #a4a3a3;
     font-size: 1.7rem;
+  }
+  &__input {
+    margin: 0 auto;
   }
   &__submit {
     background-color: #0957dd;
@@ -55,11 +63,13 @@
     &__title {
       padding-bottom: 0;
     }
-    &__input,
     &__password-confirmation,
     &__password,
     &__submit {
       margin: 50px auto 0 auto;
+    }
+    &__input {
+      margin: 0 auto;
     }
   }
   .password-reset-wrapper {
