--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -31,7 +31,7 @@
       <%= f.label :password, "パスワード", class: "user-column-area__label" %>
       <span class="email-inner">
         <p class="email-inner__value">* * * * * * * * *</p>
-        <%= link_to "変更する", root_url, class: "email-inner__link" %>
+        <%= link_to "変更する", new_password_reset_path, class: "email-inner__link" %>
       </span>
     </div>
     <hr class="profile-edit-form__hr">
