--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -2,6 +2,7 @@
 <div class="password-reset-wrapper">
   <div class="password-reset-form">
     <p class="password-reset-form__title">パスワード再設定</p>
+    <p class="password-reset-form__describe">登録済みのメールアドレスを入力してください</p>
     <%= form_with(url: password_resets_path, scope: :password_reset) do |f| %>
       <%= f.email_field :email, placeholder: "メールアドレス", class: 'password-reset-form__input' %>
       <%= f.submit "変更する", class: "password-reset-form__submit" %>
