--- a/app/assets/stylesheets/module/notice_modal.scss
+++ b/app/assets/stylesheets/module/notice_modal.scss
@@ -43,6 +43,12 @@
   &__url {
     color: #0f84ff;
   }
+  &__caution {
+    font-size: 1.5rem;
+    font-weight: 200;
+    padding-bottom: 50px;
+    color: #919191;
+  }
 }
 
 @media (max-width: 767px) {
