--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,17 +1,18 @@
 <% provide(:title, "パスワード再設定") %>
-<div class="password-reset-wrapper">
-  <div class="password-reset-form">
-    <p class="password-reset-form__title">パスワード再設定</p>
+<div class="reset-wrapper">
+  <div class="reset-form">
+    <p class="reset-form__title">パスワード再設定</p>
     <%= form_with(model: @user, url: password_reset_path(params[:id])) do |f| %>
       <%= hidden_field_tag :email, @user.email %>
 
-      <%= f.password_field :password, placeholder: "パスワード:8~20桁の半角英数字(各1文字以上)", class: 'password-reset-form__password' %>
+      <%= f.password_field :password, placeholder: "パスワード:8~20桁の半角英数字(各1文字以上)", class: 'reset-form__password' %>
       <%= error_message_for(@user, :password) %>
 
-      <%= f.password_field :password_confirmation, placeholder: "パスワード確認欄", class: 'password-reset-form__password-confirmation' %>
+      <%= f.password_field :password_confirmation, placeholder: "パスワード確認欄", class: 'reset-form__password-confirmation' %>
       <%= error_message_for(@user, :password_confirmation) %>
 
-      <%= f.submit "変更する", class: "password-reset-form__submit" %>
+      <%= f.submit "変更する", class: "reset-form__submit" %>
     <% end %>
+    <%= render 'shared/flash_message' %>
   </div>
 </div>
