メールアドレス変更機能一旦完成

--- a/app/views/email_resets/reset_complete.html.erb
+++ b/app/views/email_resets/reset_complete.html.erb
@@ -1,7 +1,7 @@
 <div class="notice-modal-wrapper">
   <div class="notice-modal">
     <%= image_tag("check.svg", class: "notice-modal__icon") %>
-    <p class="notice-modal__main-msg">パスワードの変更が完了しました</p>
+    <p class="notice-modal__main-msg">メールアドレスの変更が完了しました</p>
     <%= link_to"OK", root_url, class: "notice-modal__ok-btn" %>
   </div>
 </div>
