--- a/app/assets/stylesheets/module/notice_modal.scss
+++ b/app/assets/stylesheets/module/notice_modal.scss
@@ -40,6 +40,9 @@
     border-radius: 10px;
     padding: 10px 20px;
   }
+  &__ok-btn:hover {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  }
   &__url {
     color: #0f84ff;
   }
