--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,10 +1,6 @@
-<h1>Sample App</h1>
-
-<p>Hi <%= @user.name %>,</p>
+<p><%= @user.name %>様</p>
 
 <p>
-Welcome to the Sample App! Click on the link below to activate your account:
+<%= link_to "こちら", edit_account_activation_url(@user.activation_token, email: @user.email) %>
+のリンクにアクセスし、アカウント有効化の手続きを完了させてください。
 </p>
-
-<%= link_to "Activate", edit_account_activation_url(@user.activation_token,
-                                                    email: @user.email) %>
