--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,5 +1,5 @@
-Hi <%= @user.name %>,
+<%= @user.name %>様
 
-Welcome to the Sample App! Click on the link below to activate your account:
+こちらのリンクにアクセスし、アカウント有効化の手続きを完了させてください。
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
