--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,13 +1,12 @@
-<h1>Password reset</h1>
 
-<p>To reset your password click the link below:</p>
+<p>下記リンクをクリックし、パスワードを変更してください。</p>
 
-<%= link_to "Reset password", edit_password_reset_url(@user.reset_token,
+<%= link_to "パスワード変更", edit_password_reset_url(@user.reset_token,
                                                       email: @user.email) %>
 
-<p>This link will expire in two hours.</p>
+<p>このリンクの有効期限は2時間です。</p>
 
 <p>
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
+パスワードのリセットをしない場合は、このメールを無視してください。
+パスワードはそのまま変わりません。
 </p>
