--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,8 +1,8 @@
-To reset your password click the link below:
+下記リンクをクリックし、パスワードを変更してください。
 
 <%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
 
-This link will expire in two hours.
+このリンクの有効期限は2時間です。
 
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
+パスワードのリセットをしない場合は、このメールを無視してください。
+パスワードはそのまま変わりません。
