--- a/app/assets/stylesheets/module/heritage_charm_form.scss
+++ b/app/assets/stylesheets/module/heritage_charm_form.scss
@@ -1,24 +1,15 @@
 .heritage-charm-form {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   width: 50vw;
-  margin: 0 auto;
+  margin: 120px auto;
   border: 1px solid #cacaca;
   border-radius: 10px;
-  &__title {
-    font-size: 3rem;
-    text-align: center;
-    margin: 50px 0;
-  }
-  &__main-title, &__sub-title, &__detail, &__heritage-select, &__image, &__submit {
+  &__title, &__description, &__heritage-select, &__image, &__submit {
     display: block;
     width: 50%;
     margin: 30px auto;
     padding: 10px;
   }
-  &__detail {
+  &__description {
     height: 150px;
   }
 }
